--- a/assets/styles/sass/base/_flux.sass
+++ b/assets/styles/sass/base/_flux.sass
@@ -12,7 +12,7 @@
     margin-right: auto
     max-width: 50%
     +utils.responsive(laptop)
-        max-width: 35%
+        max-width: 80%
 
 .form-flux
     width: 100%
