--- a/assets/styles/sass/components/error-pages/_error-pages.sass
+++ b/assets/styles/sass/components/error-pages/_error-pages.sass
@@ -26,3 +26,4 @@
     &__link
         margin-top: 1rem
         margin-bottom: 1rem
+        text-align: center
